Bug 136139 - Endless loop when opening file containing EMF image
Summary: Endless loop when opening file containing EMF image
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-08-26 08:01 UTC by NISZ LibreOffice Team
Modified: 2020-09-14 13:18 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-08-26 08:01:06 UTC
Opening attachment #152822 [details] from bug #126313 makes Writer fall into endless loop with Skia rendering on Windows 8.1.

Steps to reproduce:
    1. Open attachment #152822 [details] 

Actual results:
Endless loop with Skia, opens fine with GDI.

Expected results:
File opens.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x86)
Build ID: 4f0617275f2c9669901a4b06d2133533ceb437a0
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

But not with Skia disabled.

But not yet in:
Version: 7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU szálak: 4; OS: Windows 6.3 Build 9600; Felületmegjelenítés: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL

Additional Information: 

Bibisected using bibisect-win64-7.1 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=12147e0322e0fdd1b561c94e7ebd3fdd69ceaac0 
author	Luboš Luňák <l.lunak@collabora.com>	2020-07-16 11:47:00 +0200
committer	Luboš Luňák <l.lunak@collabora.com>	2020-07-16 16:02:05 +0200

merge needlessly split polygons back in Skia drawing (tdf#133016)

Adding CC to: Luboš Luňák
Comment 1 Commit Notification 2020-08-26 09:48:06 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4f6551d24279aab31b23f4dd668f42d6e3d15348

optimize polygon merging in Skia (tdf#136139)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2020-08-28 15:16:15 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/5a9821e626f41fd46dbd19b182301bda24126c9c

optimize polygon merging in Skia (tdf#136139)

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-09-14 13:18:47 UTC
Verified in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 34a09c9c61bff30e8c4d16132bb47b2b1b16e422
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded